--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,17 +1,17 @@
 .lead {
-  max-width: 77%;
+  max-width: 984px;
   margin: 0 auto 92px;
 }
 
 @media screen and (max-width: 1024px) {
   .lead {
-    max-width: 91%;
+    max-width: 928px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .lead {
-    max-width: 100%;
+    max-width: 768px;
     margin-bottom: 88px;
   }
 }
